--- a/TesterBlazor/Components/Layout/NavMenu.razor
+++ b/TesterBlazor/Components/Layout/NavMenu.razor
@@ -1,36 +1,31 @@
 ﻿@implements IDisposable
-
 @inject NavigationManager NavigationManager
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/home">Librería Memito 🐈‍ </a>
+        <a class="navbar-brand" href="/home">Librería Memito 🐈‍</a>
     </div>
 </div>
 
 <input type="checkbox" title="Menú de navegación principal" class="navbar-toggler" />
 
-<div class="navbar collapse-horizontal" onclick="document.querySelector('.navbar-toggler').click()" style="margin-top:10px">
+<div class="navbar nav-scrollable" style="margin-top:10px">
     <nav class="nav flex-column">
-
         <div class="nav-item px-2">
             <NavLink class="nav-link" href="home" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Inicio
             </NavLink>
         </div>
-
         <div class="nav-item px-2">
             <NavLink class="nav-link" href="telegram">
                 <span class="bi bi-telegram-ico-figma" aria-hidden="true"></span> Telegram
             </NavLink>
         </div>
-
         <div class="nav-item px-2">
             <NavLink class="nav-link" href="instagram">
                 <span class="bi bi-instagram-ico-figma" aria-hidden="true"></span> Instagram
             </NavLink>
         </div>
-
         <div class="nav-item px-2">
             <div class="nav-link dropdown-toggle" data-bs-toggle="collapse" data-bs-target="#submenuCredito" aria-expanded="false">
                 <span class="bi bi-folder-ico-figma" aria-hidden="true"></span>Información de crédito
