--- a/TesterBlazor/Components/Landing.razor
+++ b/TesterBlazor/Components/Landing.razor
@@ -390,13 +390,13 @@
             <div class="card col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="image-wrapper">
-                        <a href="https://www.linkedin.com/in/ramiroagm/" target="_blank"><span class="mbr-iconfont socicon-linkedin socicon"></span></a>
+                        <a href="mailto:ramirogm44@gmail.com" target="_blank"><span class="mbr-iconfont socicon-mail socicon"></span></a>
                     </div>
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style mb-1 display-5">
-                            <strong>LinkedIn</strong>
+                            <strong>Correo electrónico</strong>
                         </h6>
-                        <p class="mbr-text mbr-fonts-style display-7"><a href="https://www.linkedin.com/in/ramiroagm/" class="text-primary" target="_blank">Contáctame por LinkedIn</a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
+                        <p class="mbr-text mbr-fonts-style display-7"><a href="mailto:ramirogm44@gmail.com" class="text-primary" target="_blank">ramirogm44@gmail.com</a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
                     </div>
                 </div>
             </div>
@@ -407,7 +407,7 @@
                         <span class="mbr-iconfont socicon-github socicon"></span>
                     </div>
                     <div class="text-wrapper">
-                        <h6 class="card-title mbr-fonts-style mb-1 display-5"><strong>GitHub</strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</h6>
+                        <h6 class="card-title mbr-fonts-style mb-1 display-5"><strong>GitHub</strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</h6>
                         <p class="mbr-text mbr-fonts-style display-7"><a href="https://github.com/ramiroagm" target="_blank" class="text-primary">Perfil en GitHub</a></p>
                     </div>
                 </div>
