--- a/TesterBlazor/Components/Layout/MainLayout.razor
+++ b/TesterBlazor/Components/Layout/MainLayout.razor
@@ -17,7 +17,8 @@
 </div>
 
 <div id="blazor-error-ui" data-nosnippet>
-    Error no controlado.
-    <a href="" class="reload">Volver al menú principal</a>
+    Hubo un error ejecutando este proceso. Por favor:
+    <a href="/home" class="reload">vuelva al menú principal</a> o
+    <a href="mailto:ramirogm44@gmail.com" class="reload">reporte el mismo</a>.
     <span class="dismiss">🗙</span>
 </div>
