--- a/TesterBlazor/Components/Layout/NavMenu.razor
+++ b/TesterBlazor/Components/Layout/NavMenu.razor
@@ -1,6 +1,8 @@
 ﻿@implements IDisposable
 @inject NavigationManager NavigationManager
 
+@* <LoadingSpinner IsVisible="@isLoading" /> *@
+
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="/home">Librería Memito 🐈‍</a>
@@ -61,6 +63,11 @@
                 </div>
             </div>
         </div>
+        <div class="nav-item px-2">
+            <NavLink class="nav-link" href="bugreport">
+                <span class="bi bi-bug-icon" aria-hidden="true"></span> Reporte de BUG
+            </NavLink>
+        </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link px-4 px-3 fixed-bottom" href="/">
                 <span class="bi bi-arrow-bar-left-nav-menu" aria-hidden="true"></span>Volver
@@ -71,6 +78,7 @@
 
 @code {
     private string? currentUrl;
+    private bool isLoading = false;
 
     protected override void OnInitialized()
     {
@@ -80,8 +88,14 @@
 
     private void OnLocationChanged(object? sender, LocationChangedEventArgs e)
     {
+        isLoading = true;
         currentUrl = NavigationManager.ToBaseRelativePath(e.Location);
         StateHasChanged();
+        Task.Delay(500).ContinueWith(_ =>
+        {
+            isLoading = false;
+            InvokeAsync(StateHasChanged);
+        });
     }
 
     public void Dispose()
