cambios + serilog parcial + bugreport fin

--- a/TesterBlazor/Components/Layout/MainLayout.razor
+++ b/TesterBlazor/Components/Layout/MainLayout.razor
@@ -6,10 +6,6 @@
     </div>
 
     <main>
-        <div class="top-row px-4">
-            <a href="https://github.com/ramiroagm" target="_blank">Perfil GitHub</a>
-        </div>
-
         <article class="content px-4">
             @Body
         </article>
@@ -19,6 +15,6 @@
 <div id="blazor-error-ui" data-nosnippet>
     Hubo un error ejecutando este proceso. Por favor:
     <a href="/home" class="reload">vuelva al menú principal</a> o
-    <a href="mailto:ramirogm44@gmail.com" class="reload">reporte el mismo</a>.
+    <a href="mailto:ramirogm44@gmail.com" class="reload">reporte el mismo por correo</a> o <a href="/bugreport" class="reload">en la página de reportes</a>.
     <span class="dismiss">🗙</span>
 </div>
