--- a/TesterBlazor/Components/Pages/ModalesGenericos/ModalReporteOk.razor
+++ b/TesterBlazor/Components/Pages/ModalesGenericos/ModalReporteOk.razor
@@ -20,6 +20,6 @@
 @code{
     private void CerrarModal()
     {
-        Navigation.NavigateTo("/");
+        Navigation.NavigateTo("/home");
     }
 }
