--- a/TesterBlazor/Components/Landing.razor
+++ b/TesterBlazor/Components/Landing.razor
@@ -1,6 +1,8 @@
 ﻿@layout EmptyLayout
 @page "/"
 
+<PageTitle>Inicio - Ramiro Gallo</PageTitle>
+
 <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 <section class="menu menu2 cid-uHhBVF5BD5" once="menu" id="menu2-0">
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
