--- a/TesterBlazor/Components/Pages/BugReport.razor
+++ b/TesterBlazor/Components/Pages/BugReport.razor
@@ -3,6 +3,8 @@
 
 @page "/bugreport"
 
+<PageTitle>Reporte de errores</PageTitle>
+
 <h2> 🐛 Reporte de BUG </h2>
 
 <div class="card text-center" style="margin-bottom:20px">
