--- a/TesterBlazor/Components/Pages/InfoCredito/Nucleos/Modales/ModalNuevoNucleo.razor
+++ b/TesterBlazor/Components/Pages/InfoCredito/Nucleos/Modales/ModalNuevoNucleo.razor
@@ -14,7 +14,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <table class="table">
+                <table class="table table-hover">
                     <thead>
                         <tr>
                             <th>Documento</th>
@@ -75,7 +75,6 @@
                                         }
                                     </td>
                                     <td>
-                                        @* <button type="button" class="btn btn-outline-info" @onclick="()=> VerPersona(p)">👁️</button> *@
                                         <button type="button" class="btn btn-outline-danger" @onclick="()=> QuitarPersona(p)">🗑️</button>
                                     </td>
                                 </tr>
@@ -90,7 +89,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                <button type="submit" class="btn btn-success" onclick="@GuardarNucleo">
+                <button type="submit" class="btn btn-success" onclick="@GuardarNucleo" disabled="@IsLoading">
                     @if (IsLoading)
                     {
                         <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
@@ -106,9 +105,22 @@
     </div>
 </div>
 
+<ModalNucleoOk />
+<ModalNucleoFail />
+
 @code {
     [Parameter] public int? TipoRelacion { get; set; }
+
     private List<Persona> personas = new List<Persona>();
+    private InfoCreditoNucleo nucleo = new InfoCreditoNucleo()
+    {
+            Relacion = new Relacion()
+            {
+                IdRelacion = 0,
+            },
+            Personas = new()
+    };
+
     private bool IsLoading { get; set; } = false;
 
     public async Task ShowAsync()
@@ -208,18 +220,37 @@
     {
         if (!PuedeGuardarNucleo())
         {
-            // TODO: VALIDADORES / MODAL DE ERROR
+            await InvokeAsync(StateHasChanged);
+            await JSRuntime.InvokeVoidAsync("closeModal", "addNucleoModal");
+            await JSRuntime.InvokeVoidAsync("showModal", "errorModal");
             return;
         }
 
         IsLoading = true;
+
         await InvokeAsync(StateHasChanged);
-
-        // TODO: GUARDAR NUCLEO
-
+        List<InfoCreditoPersona> pers = new();
+        foreach (var p in personas)
+        {
+            pers.Add(MapearPersona(p));
+        }
+        nucleo.Personas = pers;
+        nucleo.Relacion.IdRelacion = TipoRelacion.Value;
+        bool guardado = await NucleosService.CrearNucleo(nucleo);
         IsLoading = false;
         await InvokeAsync(StateHasChanged);
         await JSRuntime.InvokeVoidAsync("closeModal", "addNucleoModal");
-        // TODO MODAL DE TODO CORRECTO
+
+        if (guardado)
+        {
+            personas = new();
+            await InvokeAsync(StateHasChanged);
+            await JSRuntime.InvokeVoidAsync("showModal", "successModal");
+        }
+        else
+        {
+            await InvokeAsync(StateHasChanged);
+            await JSRuntime.InvokeVoidAsync("showModal", "errorModal");
+        }
     }
 }
