--- a/TesterBlazor/Components/Pages/InfoCredito/Nucleos/Nucelos.razor
+++ b/TesterBlazor/Components/Pages/InfoCredito/Nucleos/Nucelos.razor
@@ -29,6 +29,11 @@
     </div>
 </div>
 
+<!-- Vista de resultado de Nucleos -->
+<fieldset style="border: 1px solid #ccc; padding: 10px; margin-bottom: 20px; border-radius: 10px; flex-grow: 1;">
+    <TesterBlazor.Components.Pages.InfoCredito.Nucleos.Componentes.ResultadoBusquedaNucleo />
+</fieldset>
+
 <!-- Modales para agregar nucleo -->
 <TesterBlazor.Components.Pages.InfoCredito.Nucleos.Modales.ModalNuevoNucleo />
 
